# influx_test

./: .env  .gitmodules  README.md  docker-compose.yml  pyproject.toml  read.py  test_audio.ipynb  write.py
config/: influx-configs
data/: influxd.bolt
data/engine/data/10fdd8e68558488c/autogen/3/: 000000001-000000001.tsm  fields.idxl
data/engine/data/4f13626dc7ccad16/autogen/1/: fields.idxl
data/engine/data/4f13626dc7ccad16/autogen/1/index/0/: L0-00000001.tsl
data/engine/data/4f13626dc7ccad16/autogen/1/index/1/: L0-00000001.tsl
data/engine/data/4f13626dc7ccad16/autogen/1/index/2/: L0-00000001.tsl
data/engine/data/4f13626dc7ccad16/autogen/1/index/3/: L0-00000001.tsl
data/engine/data/4f13626dc7ccad16/autogen/1/index/4/: L0-00000001.tsl
data/engine/data/4f13626dc7ccad16/autogen/1/index/5/: L0-00000001.tsl
data/engine/data/4f13626dc7ccad16/autogen/1/index/6/: L0-00000001.tsl
data/engine/data/4f13626dc7ccad16/autogen/1/index/7/: L0-00000001.tsl
data/engine/data/71e8bb0de2d67e29/autogen/2/: fields.idxl
data/engine/data/71e8bb0de2d67e29/autogen/2/index/2/: L0-00000001.tsl
data/engine/wal/4f13626dc7ccad16/autogen/1/: _00002.wal
data/engine/wal/71e8bb0de2d67e29/autogen/2/: _00001.wal
