[tool.poetry]
name = "influx"
version = "0.1.0"
description = ""
authors = ["Руслан Зарипов <zaripov.ra@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydub = "^0.25.1"
numpy = "^1.26.4"
influxdb-client = {extras = ["ciso"], version = "^1.41.0"}
scipy = "^1.13.0"
pip = "^24.0"
install = "^1.3.5"
toml-to-requirements = "^0.2.0"
sounddevice = "^0.4.6"
pywavelets = "^1.6.0"
pylab-sdk = "^1.7.2"
matplotlib = "^3.8.4"
influxdb3-python = "^0.3.6"
pandas = "^2.2.2"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
